--- a/AWS/simple-proxy-api.yaml
+++ b/AWS/simple-proxy-api.yaml
@@ -20,7 +20,7 @@ paths:
           default:
             statusCode: 200
         uri:
-         Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${RestHandler.Arn}/invocations"
+         Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${RestAPIHandler.Arn}/invocations"
         passthroughBehavior: when_no_match
         httpMethod: POST
         type: aws_proxy
@@ -49,7 +49,7 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,x-amz-user-agent'"
-              method.response.header.Access-Control-Allow-Origin: "${RestHandler.Arn}"
+              method.response.header.Access-Control-Allow-Origin: "${CORS}"
         passthroughBehavior: when_no_match
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
@@ -66,7 +66,7 @@ paths:
       responses: {}
       x-amazon-apigateway-integration:
         uri: 
-         Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${RestHandler.Arn}/invocations"
+         Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${RestAPIHandler.Arn}/invocations"
         httpMethod: POST
         type: aws_proxy
     options:
