--- a/AWS/simple-proxy-api.yaml
+++ b/AWS/simple-proxy-api.yaml
@@ -49,7 +49,7 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,x-amz-user-agent'"
-              method.response.header.Access-Control-Allow-Origin: "'youstillgotobluecoat.bradi.sh'"
+              method.response.header.Access-Control-Allow-Origin: "'ysgtb.bradi.sh'"
         passthroughBehavior: when_no_match
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
@@ -94,7 +94,7 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,x-amz-user-agent'"
-              method.response.header.Access-Control-Allow-Origin: "'youstillgotobluecoat.bradi.sh'"
+              method.response.header.Access-Control-Allow-Origin: "'ysgtb.bradi.sh'"
         passthroughBehavior: when_no_match
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
