--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ plugins:
 title: You still go to Blue Coat
 tagline: Tracking who goes to Blue Coat
 description: We live in confusing times - now there's one less thing to worry about. You can always rely on this site to let you know who still goes to Blue Coat
+url: ysgtb.bradi.sh
