--- a/AWS/simple-proxy-api.yaml
+++ b/AWS/simple-proxy-api.yaml
@@ -8,6 +8,8 @@ schemes:
 paths:
   /:
     x-amazon-apigateway-any-method:
+      x-amazon-apigateway-auth:
+        type: AWS_IAM
       produces:
       - application/json
       responses:
@@ -49,13 +51,15 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,x-amz-user-agent'"
-              method.response.header.Access-Control-Allow-Origin: "'ysgtb.bradi.sh'"
+              method.response.header.Access-Control-Allow-Origin: "'https://ysgtb.bradi.sh'"
         passthroughBehavior: when_no_match
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
         type: mock
   /{proxy+}:
     x-amazon-apigateway-any-method:
+      x-amazon-apigateway-auth:
+        type: AWS_IAM
       produces:
       - application/json
       parameters:
@@ -94,7 +98,7 @@ paths:
             responseParameters:
               method.response.header.Access-Control-Allow-Methods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
               method.response.header.Access-Control-Allow-Headers: "'Content-Type,Authorization,X-Amz-Date,X-Api-Key,X-Amz-Security-Token,x-amz-user-agent'"
-              method.response.header.Access-Control-Allow-Origin: "'ysgtb.bradi.sh'"
+              method.response.header.Access-Control-Allow-Origin: "'https://ysgtb.bradi.sh'"
         passthroughBehavior: when_no_match
         requestTemplates:
           application/json: "{\"statusCode\": 200}"
