--- a/AWS/cloudformation.yaml
+++ b/AWS/cloudformation.yaml
@@ -43,6 +43,9 @@ Resources:
     Type: AWS::DynamoDB::Table
     Properties: 
       TableName: "bluecoat"
+      TimeToLiveSpecification:
+        AttributeName : "TTL"
+        Enabled : true
       AttributeDefinitions: 
         - 
           AttributeName: "recordType"
@@ -51,8 +54,11 @@ Resources:
           AttributeName: "identifier"
           AttributeType: "S"
         - 
-          AttributeName: "association"
-          AttributeType: "S"
+          AttributeName: "record"
+          AttributeType: "N"
+        - 
+          AttributeName: "TTL"
+          AttributeType: "N"
       KeySchema: 
         - 
           AttributeName: "recordType"
@@ -71,7 +77,7 @@ Resources:
               AttributeName: "recordType"
               KeyType: "HASH"
             - 
-              AttributeName: "association"
+              AttributeName: "record"
               KeyType: "RANGE"
           Projection: 
             ProjectionType: "ALL"
