--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ plugins:
   - jekyll-seo-tag
 title: You still go to Blue Coat
 tagline: Tracking who goes to Blue Coat
-description: Who does still go to bluecoat?
+description: {{site.data.name}} still goes to Blue Coat!
 url: ysgtb.bradi.sh
