--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,7 @@ jobs:
       run: |
         sudo apt-get install -y curl
         curl https://xyrm1h5e1h.execute-api.eu-west-1.amazonaws.com/prod/attendees/latest -o _data/latest.json
-        git commit -m "Add changes" -a
+        git config --global user.name "r1ch"
+        git add -A
+        git diff-index --quiet HEAD || git commit -m 'Update attendee'
         git push
