--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  update:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -21,9 +21,9 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a set of commands using the runners shell
+              # sudo apt-get install -y curl
     - name: Get the current attendee
       run: |
-        sudo apt-get install -y curl
         curl https://xyrm1h5e1h.execute-api.eu-west-1.amazonaws.com/prod/attendees/latest -o _data/latest.json
         git config --global user.name "r1ch"
         git add -A
