--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Update Attendee
 # events but only for the master branch
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: '5 12/8 * * *'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
