--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,8 @@ name: Update Attendee
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  schedule:
-    - cron: '* * * * *'
+  repository_dispatch:
+    types: [VISIT, ATTENDEE]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
