--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,7 @@ jobs:
               # sudo apt-get install -y curl
     - name: Get the current attendee
       run: |
+        git pull
         curl https://xyrm1h5e1h.execute-api.eu-west-1.amazonaws.com/prod/attendees/latest -o _data/latest.json
         echo "{\"date\":\"`date \"+%H:%M on %A %d %b %Y\"`\"}" > _data/time.json
         git config --global user.name "r1ch"
