--- a/AWS/cloudformation.yaml
+++ b/AWS/cloudformation.yaml
@@ -45,7 +45,7 @@ Resources:
       TableName: "bluecoat"
       TimeToLiveSpecification:
         AttributeName : "TTL"
-        Enabled : false
+        Enabled : true
       AttributeDefinitions: 
         - 
           AttributeName: "recordType"
